--- a/fund/uwsgi.ini
+++ b/fund/uwsgi.ini
@@ -4,3 +4,13 @@ chdir = /root/workspace/fund-backend/FundPJ/fund
 module = wsgi
 master = true
 process = 4
+plugins=python
+daemonize = /root/workspace/fund-backend/FundPJ/fund/log/uwsgi.log
+vacuum = true         //退出、重启时清理文件
+buffer-size = 65535
+profiler = true
+memory-report = true
+logdate = true
+enable-threads = true
+post-buffering = 1
+limit-as = 6048
