fix 简单描述一下干了什么 What:
* 为什么要这么做
Why:

* 怎样做的？有何副作用？
How:☺

--- a/fund/uwsgi.ini
+++ b/fund/uwsgi.ini
@@ -13,3 +13,4 @@ logdate = true
 enable-threads = true
 post-buffering = 1
 limit-as = 6048
+pidfile = /root/workspace/fund-backend/FundPJ/fund/fund.pid
