--- a/fund/requirements.txt
+++ b/fund/requirements.txt
@@ -3,7 +3,8 @@ uwsgi==2.0.15
 redis==2.10.5
 Fabric==1.13.2
 requests==2.9.1
-celery==4.1.
+celery==4.1.0
 django-redis==4.4.0
 MySQL-python==1.2.5
 django-crontab==0.7.0
+celery-with-redis==3.0
